--- a/docs/components/schemas/member.yml
+++ b/docs/components/schemas/member.yml
@@ -1,7 +1,7 @@
-MemberResponse:
+ManagerResponse:
   type: object
   properties:
-    user_id:
+    id:
       type: string
       format: uuid
     email:
@@ -9,13 +9,16 @@ MemberResponse:
     display_name:
       type: string
       nullable: true
-    role:
+    created_at:
       type: string
-      enum: [owner, manager]
+      format: date-time
+    is_active:
+      type: boolean
   required:
-    - user_id
+    - id
     - email
-    - role
+    - created_at
+    - is_active
 
 AddOrganizationManagerRequest:
   type: object
