--- a/docs/paths/managers.yml
+++ b/docs/paths/managers.yml
@@ -36,7 +36,7 @@ listManagers:
                     items:
                       type: array
                       items:
-                        $ref: "../components/schemas/member.yml#/MemberResponse"
+                        $ref: "../components/schemas/member.yml#/ManagerResponse"
   post:
     tags:
       - Organizations
