--- a/docs/paths/users.yml
+++ b/docs/paths/users.yml
@@ -21,6 +21,14 @@ listUsers:
         schema:
           type: string
         description: 依 Email 搜尋
+      - name: ids
+        in: query
+        schema:
+          type: array
+          items:
+            type: string
+            format: uuid
+        description: 依使用者 ID 列表篩選
       - name: display_name
         in: query
         schema:
