--- a/docs/components/schemas/location.yml
+++ b/docs/components/schemas/location.yml
@@ -5,7 +5,7 @@ LocationResponse:
       type: string
       format: uuid
     organization:
-      $ref: "./organization.yml#/OrganizationTag"
+      $ref: "./organization.yml#/OrganizationBrief"
     name:
       type: string
     created_at:
