--- a/docs/components/schemas/user.yml
+++ b/docs/components/schemas/user.yml
@@ -26,7 +26,7 @@ UserResponse:
       type: array
       description: The list of organizations the user belongs to
       items:
-        $ref: "./organization.yml#/OrganizationTag"
+        $ref: "./organization.yml#/OrganizationBrief"
   required:
     - id
     - email
