Add file service, add cover column to locations table

--- a/compose.yml
+++ b/compose.yml
@@ -27,6 +27,8 @@ services:
     restart: always
     ports:
       - "8080:8080"
+    volumes:
+      - ./storage:/app/storage
     environment:
       APP_ENV: ${APP_ENV}
       PROD_ORIGINS: ${PROD_ORIGINS}
