--- a/docs/paths/organizations.yml
+++ b/docs/paths/organizations.yml
@@ -126,3 +126,85 @@ organizationDetail:
     responses:
       "204":
         description: Organization deleted (No Content)
+
+coverUpload:
+  put:
+    tags:
+      - Organizations
+    summary: "上傳組織封面圖片"
+    description: |
+      上傳組織的封面圖片。
+
+      **權限 Access Control**:
+      - **Organization Owner** 或 **System Admin**: 僅限組織擁有者或系統管理員可更新。
+
+      **檔案限制**:
+      - 最大檔案大小: 5MB
+      - 允許格式: image/jpeg, image/png
+      - 圖片會自動調整為最大 1000x1000 像素
+      - 自動生成 200x200 縮圖
+    security:
+      - bearerAuth: []
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+    requestBody:
+      required: true
+      content:
+        multipart/form-data:
+          schema:
+            type: object
+            properties:
+              file:
+                type: string
+                format: binary
+            required:
+              - file
+    responses:
+      "200":
+        description: Cover uploaded successfully
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                file_id:
+                  type: string
+                  format: uuid
+                message:
+                  type: string
+      "400":
+        description: Invalid file format or size
+      "403":
+        description: Forbidden - 只有組織擁有者可上傳封面
+      "404":
+        description: Organization not found
+  delete:
+    tags:
+      - Organizations
+    summary: "移除組織封面圖片"
+    description: |
+      移除組織的封面圖片。
+
+      **權限 Access Control**:
+      - **Organization Owner** 或 **System Admin**: 僅限組織擁有者或系統管理員可移除。
+    security:
+      - bearerAuth: []
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+    responses:
+      "204":
+        description: Cover removed successfully (No Content)
+      "403":
+        description: Forbidden - 只有組織擁有者可移除封面
+      "404":
+        description: Organization not found
