--- a/docs/paths/resources.yml
+++ b/docs/paths/resources.yml
@@ -159,3 +159,87 @@ resourceDetail:
         description: Forbidden
       "404":
         description: Resource not found
+
+resourceCoverUpload:
+  put:
+    tags:
+      - Resources
+    summary: "上傳資源封面圖片"
+    description: |
+      上傳資源的封面圖片。
+
+      **權限 Access Control**:
+      - **System Admin**: 完全存取權限。
+      - **Location Manager or above**: 可管理所屬場域下的資源封面。
+
+      **檔案限制**:
+      - 最大檔案大小: 5MB
+      - 允許格式: image/jpeg, image/png
+      - 圖片會自動調整為最大 1000x1000 像素
+      - 自動生成 200x200 縮圖
+    security:
+      - bearerAuth: []
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+    requestBody:
+      required: true
+      content:
+        multipart/form-data:
+          schema:
+            type: object
+            properties:
+              file:
+                type: string
+                format: binary
+            required:
+              - file
+    responses:
+      "200":
+        description: Cover uploaded successfully
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                file_id:
+                  type: string
+                  format: uuid
+                message:
+                  type: string
+      "400":
+        description: Invalid file format or size
+      "403":
+        description: Forbidden - 無權限上傳此資源封面
+      "404":
+        description: Resource not found
+  delete:
+    tags:
+      - Resources
+    summary: "移除資源封面圖片"
+    description: |
+      移除資源的封面圖片。
+
+      **權限 Access Control**:
+      - **System Admin**: 完全存取權限。
+      - **Location Manager or above**: 可管理所屬場域下的資源封面。
+    security:
+      - bearerAuth: []
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+    responses:
+      "204":
+        description: Cover removed successfully (No Content)
+      "403":
+        description: Forbidden - 無權限移除此資源封面
+      "404":
+        description: Resource not found
