Add new resource types: classroom, other

--- a/docs/components/schemas/resource.yml
+++ b/docs/components/schemas/resource.yml
@@ -61,6 +61,8 @@ CreateResourceRequest:
         - table_tennis
         - volleyball
         - football
+        - classroom
+        - other
   required:
     - name
     - location_id
